# nomad-neb-workflows

./: .cruft.json  .gitignore  404.html  README.md  index.html  mkdocs.yml  mkdocs.yml.rej  move_template_files.sh  pyproject.toml  pyproject.toml.rej
.github/workflows/: actions.yml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_neb_workflows/schema_packages/: __init__.py  neb.py
tests/: conftest.py  test_AlCo2S4.py  test_dummy.py
tests/data/AlCo2S4_uday_gajera/: workflow.archive.yaml
tests/data/AlCo2S4_uday_gajera/AlCo2S4/: AlCo2S4.11322866  CONTCAR  INCAR  OSZICAR  OUTCAR  POSCAR  vasp.sbatch
tests/data/AlCo2S4_uday_gajera/AlCo2S4/neb/: INCAR  NEB-AlCo2S4.11531937  neb.sbatch
tests/data/AlCo2S4_uday_gajera/AlCo2S4/neb/00/: 00-AlCo2S4.11481305  CONTCAR  INCAR  OSZICAR  OUTCAR  POSCAR  vasp.sbatch
tests/data/AlCo2S4_uday_gajera/AlCo2S4/neb/01/: CONTCAR  OSZICAR  OUTCAR  POSCAR
tests/data/AlCo2S4_uday_gajera/AlCo2S4/neb/02/: CONTCAR  OSZICAR  OUTCAR  POSCAR
tests/data/AlCo2S4_uday_gajera/AlCo2S4/neb/03/: CONTCAR  OSZICAR  OUTCAR  POSCAR
tests/data/AlCo2S4_uday_gajera/AlCo2S4/neb/04/: CONTCAR  OSZICAR  OUTCAR  POSCAR
tests/data/AlCo2S4_uday_gajera/AlCo2S4/neb/05/: 05-AlCo2S4.11481306  CONTCAR  KPOINTS  OSZICAR  OUTCAR  POSCAR  POTCAR  POTCAR.stripped  vasp.sbatch
tests/data/CH4activation_on_RhCU-SAA_juliaschumann/: chemical_reactions_workflow_archive.json  main_chemical_reaction_workflow_archive.json
tests/data/CH4activation_on_RhCU-SAA_juliaschumann/ActivationEnergies/RhCu_CH3_H/: CONTCAR  CONTCAR.con  CONTCAR.xyz  DOSCAR  OSZICAR  POSCAR  POSCAR.con  POSCAR.xyz  XDATCAR  energy  maxforce  movie.xyz
tests/data/CH4activation_on_RhCU-SAA_juliaschumann/ActivationEnergies/RhCu_CH4/: CONTCAR  CONTCAR.con  CONTCAR.xyz  DOSCAR  OSZICAR  POSCAR  POSCAR.con  POSCAR.xyz  XDATCAR  energy  maxforce  movie.xyz
tests/data/CH4activation_on_RhCU-SAA_juliaschumann/SegregationEnergies/CH3/RhCu_CH3/: CONTCAR  CONTCAR.con  CONTCAR.xyz  DOSCAR  OSZICAR  POSCAR  POSCAR.con  POSCAR.xyz  XDATCAR  energy  maxforce  movie.xyz
tests/data/CH4activation_on_RhCU-SAA_juliaschumann/SegregationEnergies/H/RhCu_xHfcc/: CONTCAR  CONTCAR.con  CONTCAR.xyz  DOSCAR  OSZICAR  POSCAR  POSCAR.con  POSCAR.xyz  XDATCAR  energy  maxforce  movie.xyz
tests/data/CH4activation_on_RhCU-SAA_juliaschumann/SegregationEnergies/SAA_Surface/RhCu/: CONTCAR  CONTCAR.con  CONTCAR.xyz  CONVERGED  DOSCAR  EnergyPerIter.emf  KPOINTS  MaxForcePerIter.emf  OSZICAR  POSCAR  RhCu.xsd  RhCu_OptimPath.arc  RhCu_OptimPath.xtd  Thumbs.db  XDATCAR  maxforce  movie.xyz
tests/data/NEB_CuCuZn_211_CH3-O_julia_schumann/: workflow.archive.yaml
tests/data/NEB_CuCuZn_211_CH3-O_julia_schumann/NEB_CuCuZn_211CH3-O/: multilog.txt  neb0.traj  neb1.traj  neb2.traj  neb3.traj  neb4.traj  neb5.traj  neb6.traj  neb_jxiao.py
tests/data/NEB_CuCuZn_211_CH3-O_julia_schumann/NEB_CuCuZn_211CH3-O/ekspressen_0000/: log  log0  myprocs0000.txt  pw.inp
tests/data/NEB_CuCuZn_211_CH3-O_julia_schumann/NEB_CuCuZn_211CH3-O/ekspressen_0001/: log  log0  myprocs0001.txt  pw.inp
tests/data/NEB_CuCuZn_211_CH3-O_julia_schumann/NEB_CuCuZn_211CH3-O/ekspressen_0002/: log  log0  myprocs0002.txt  pw.inp
tests/data/NEB_CuCuZn_211_CH3-O_julia_schumann/NEB_CuCuZn_211CH3-O/ekspressen_0003/: log  log0  myprocs0003.txt  pw.inp
tests/data/NEB_CuCuZn_211_CH3-O_julia_schumann/NEB_CuCuZn_211CH3-O/ekspressen_0004/: log  log0  myprocs0004.txt  pw.inp
tutorial/: tutorial.html
